# TriSense

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
artifacts/: model_card.json
artifacts/gallery/: gallery.json
backend/: requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/encoders/: audio.py  text.py  video.py
backend/app/features/: pipeline.py
backend/app/model/: checkpoint.py  fusion.py  lora.py
backend/app/service/: inference.py
backend/tests/: conftest.py  test_api.py  test_inference.py  test_pipeline.py
checkpoints/: trisense.pt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  emotionMeta.ts  types.ts
frontend/src/components/: GallerySection.tsx  Header.tsx  ModelCardSection.tsx  ResultSection.tsx  UploadSection.tsx
training/: dataset.py  download_data.py  evaluate.py  make_gallery.py  metrics.py  prefetch_models.py  requirements.txt  train.py
